fix: update styles for info and bottom section for improved layout and spacing

--- a/src/index.css
+++ b/src/index.css
@@ -51,9 +51,9 @@ nav p {
 .info {
   color: black;
   font-size: 11px;
-  padding: 10px;
+  padding: 0;
   text-align: center;
-  background: #ffffff;
+  background: transparent;
   width: 100%;
   position: fixed;
   left: 0;
@@ -66,16 +66,15 @@ nav p {
   width: 100%;
   position: fixed;
   left: 0;
-  bottom: 100px;
-  background: #fff;
+  bottom: 80px;
+  background: transparent;
   z-index: 101;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-top: 0;
-  box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.04);
-  padding: 16px 0;
+  padding: 1px 0;
 }
 
 .input-container {
@@ -91,7 +90,7 @@ input {
   width: 100%;
   font-size: 16px;
   background-color: white;
-  padding: 10px;
+  padding: 8px;
   color: black;
   box-shadow: rgba(54, 177, 255, 0.05) 0px 0px 0px 1px,
     rgba(54, 177, 255, 0.1) 0px 4px 8px -2px,
